# preferences_test_template

./: README.md  cookiecutter.json
{{cookiecutter.folder_name}}/: CMakeLists.txt  {{cookiecutter.widget_name|lower}}widgettest.cpp  {{cookiecutter.widget_name|lower}}widgettest.h
